--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "teddynecsoui/cleanlogin",
+    "name": "teddynecsoiu/cleanlogin",
     "description": "A simple login page theme",
     "type": "silverstripe-module",
     "homepage": "https://github.com/teddynecsoiu/cleanlogin",
