--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "https://github.com/teddynecsoiu/cleanlogin",
     "keyworld": ["silverstripe", "gridfield"],
     "require": {
-        "silverstripe/framework": "3.1"
+        "silverstripe/framework": "~3.1"
     },
     "license": "MIT",
     "authors": [
